--- a/app/views/snippets/header.liquid.haml
+++ b/app/views/snippets/header.liquid.haml
@@ -1,10 +1,9 @@
 %header
   {% include ticker %}
 
-  .row.logo
-    .small-12.large-6.columns
-      %h1
-        %a{ href: '/' }> {{ site.name }}
+  .row.logo-holder
+    .small-12.large-7.columns.no-padding
+      %a.logo{ href: '/' } {{ site.name }}
 
   .row
     .small-12.large-5.columns
