--- a/app/views/snippets/newsletter.liquid.haml
+++ b/app/views/snippets/newsletter.liquid.haml
@@ -1,8 +1,6 @@
 .newsletter
-  .row
-    .small-4.columns.embroidery
-    .small-4.columns
-      %h1 Newsletter
-    .small-4.columns.embroidery
-
-{% include newsletter_form %}
+  .row.no-margin
+    .small-11.small-centered.columns.img-title
+  .row.form-row.no-margin
+    .small-11.small-centered.columns
+      {% include newsletter_form %}
