--- a/app/views/snippets/post_social.liquid.haml
+++ b/app/views/snippets/post_social.liquid.haml
@@ -1,10 +1,13 @@
 .row
   .large-12.small-4.columns
     %a.facebook#share-1{ href: '#' }
-      %i.fa.fa-facebook  – Like
+      %i.fa.fa-facebook
+      – Like
   .large-12.small-4.columns
     %a.twitter#share-2{ href: '#' }
-      %i.fa.fa-twitter  – Share
+      %i.fa.fa-twitter
+      – Share
   .large-12.small-4.columns
     %a.pinterest#share-3{ href: '#' }
-      %i.fa.fa-pinterest  – Pin it
+      %i.fa.fa-pinterest
+      – Pin it
