--- a/app/views/snippets/ticker.liquid.haml
+++ b/app/views/snippets/ticker.liquid.haml
@@ -1,1 +1,14 @@
-%p Hello World
+.slider-holder
+  .slider-controls
+    .slider-left#slider-left
+    .slider-right#slider-right
+  .slider
+    {% for panel in contents.panels %}
+    .slide
+      %img{ src: "{{ panel.image.url | resize: '1000x400#' }}", alt: "{{ panel.title | escape }}" }
+      .row
+        .large-5.small-10.small-centered.large-offset-5.columns.panel-info
+          %h2 {{ panel.title | escape }}
+          %h3 {{ panel.subtitle | escape }}
+          %p {{ panel.body | escape }}
+    {% endfor %}
