--- a/public/stylesheets/_variables.css.sass
+++ b/public/stylesheets/_variables.css.sass
@@ -1,7 +1,7 @@
 $bg1: #005838
 $bg1alt: #8BC53F
 $bg2: #716558
-$bg2alt: rgba(#48311E, 0.6)
+$bg2alt: rgb(144,132,121)
 $bg3: #FFFFFF
 
 $col1: #000000
