--- a/app/views/snippets/newsletter_form.liquid.haml
+++ b/app/views/snippets/newsletter_form.liquid.haml
@@ -4,12 +4,12 @@
     %input{ type: 'hidden', value: '/email-registered', name: 'success_callback' }
     %input{ type: 'hidden', value: '/index', name: 'error_callback' }
 
-    .small-12.columns
-      %input{ type: 'text', name: 'content[email]', placeholder: 'Join our email newsletter', class: '{% if email.errors.size > 0 %}error{% endif %}' }>
+    .small-11.small-centered.columns
+      %input{ type: 'text', name: 'content[email]', placeholder: 'Email Address:', class: 'bordered {% if email.errors.size > 0 %}error{% endif %}' }>
       {% if email.errors %}
       %small.error> {{ email.errors | first | last | capitalize }}
       {% endif %}
   
-  .row
+  .row.no-margin
     .small-4.columns.small-offset-8
       %button.block{ type: 'submit' }
