--- a/public/stylesheets/pages.css.sass
+++ b/public/stylesheets/pages.css.sass
@@ -1,11 +1,14 @@
-@import "compass/css3/border-radius"
-@import "compass/css3/transform"
-@import "compass/css3/box-shadow"
+@import "compass"
 @import "variables"
 
 body
   font-family: $default-font
   background: $bg2alt
+
+a
+  color: $col1alt
+  &:hover
+    color: lighten($col1alt, 20%)
 
 .container
   width: 100%
@@ -76,11 +79,124 @@ p
 .centered
   text-align: center !important
 
-header
-  background: $bg2alt
-  padding: 20px 0px 40px 0px
+.bordered
+  border: 2px solid $bg1alt !important
 
+.no-padding
+  padding: 0 !important
+
+.img-title
+  height: 60px
+  background-repeat: no-repeat
+  background-position: center
+  background-size: 100%
+
+.border
   position: relative
+  z-index: 999999999
+  background: $bg1
+  height: 30px
+  width: 100%
+  @include box-shadow(0 8px 8px 0px rgba(0,0,0,0.2))
+  &.right-half
+    width: 50%
+    float: right
+    @include border-radius(0 0 0 200px)
+  & > .border
+    top: 30px
+
+header
+  height: 400px
+  background: $bg2alt
+  padding: 0px 0px 40px 0px
+  position: relative
+  .slider-holder
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    display: block
+    overflow: hidden
+    .slider-controls
+      height: 60px
+      position: absolute
+      display: block
+      width: 100%
+      top: 50%
+      margin-top: -30px
+      cursor: pointer
+      z-index: 99999999
+      .slider-left
+        float: left
+        height: 60px
+        width: 60px
+        background-image: url('../images/arrow_backwards.png')
+        background-position: left
+        background-size: auto 100%
+        background-repeat: no-repeat
+      .slider-right
+        float: right
+        height: 60px
+        width: 60px
+        background-image: url('../images/arrow_forwards.png')
+        background-position: right
+        background-size: auto 100%
+        background-repeat: no-repeat
+    .slider
+      width: 100000px
+      @include transition(all 0.3s ease-in-out)
+      .slide
+        float: left
+        position: relative
+        .row
+          position: absolute
+          bottom: 0
+          right: 0
+          .panel-info
+            background: rgba(255,255,255,0.3)
+            position: absolute
+            bottom: 0
+            @include border-radius(40px 40px 0 0)
+            padding: 18px
+            box-sizing: content-box
+          
+  .logo
+    width: 100%
+    height: 140px
+    @include border-radius(0 0 40px 0)
+    display: block
+    color: rgba(0,0,0,0)
+    background-color: rgba(255,255,255,0.3)
+    background-image: url('../images/sgn_logo.png')
+    background-position: right
+    background-size: 100% auto
+    background-repeat: no-repeat
+
+.newsletter
+  background: $bg2
+  @include border-radius(0 0 10px 10px)
+  margin-bottom: 60px
+  .img-title
+    background-image: url('../images/newsletter_header.png')
+  .form-row
+    background: $bg2alt
+    @include border-radius(0 0 10px 10px)
+  form
+    margin-top: 14px
+    background: #E5E5E5
+    input
+      margin-top: 8px
+    button
+      display: inline-block
+      float: right
+      width: 120px
+      background-color: transparent
+      border: none
+      background-image: url('../images/button_joinnow_OFF.png')
+      background-repeat: no-repeat
+      background-position: center
+      background-size: auto 100%
+
 
 .posts
   margin-bottom: 20px
@@ -150,6 +266,14 @@ header
   &:last-of-type
     &:after
       opacity: 1
+  .columns
+    text-align: center
+  a
+    display: inline-block
+    margin: 4px 0
+    i:before
+      display: inline-block
+      margin: 0 4px 0 0
 
 footer
   background: $bg1
@@ -217,3 +341,6 @@ footer
     &.no-border
       &:after
         opacity: 0
+
+.no-margin
+  margin: 0 !important
