--- a/app/views/snippets/header.liquid.haml
+++ b/app/views/snippets/header.liquid.haml
@@ -1,7 +1,7 @@
 %header
   {% include ticker %}
 
-  .row.logo-holder
+  .row.logo-holder.no-max
     .small-12.large-7.columns.no-padding
       %a.logo{ href: '/' } {{ site.name }}
 
