--- a/app/views/snippets/post_social.liquid.haml
+++ b/app/views/snippets/post_social.liquid.haml
@@ -1,13 +1,10 @@
-.row
+.row.quarter-padding
   .large-12.small-4.columns
-    %a.facebook#share-1{ href: '#' }
-      %i.fa.fa-facebook
-      – Like
+    %a.social-link.small.facebook#share-1{ href: '#' }
+    – Like
   .large-12.small-4.columns
-    %a.twitter#share-2{ href: '#' }
-      %i.fa.fa-twitter
-      – Share
+    %a.social-link.small.twitter#share-2{ href: '#' }
+    – Share
   .large-12.small-4.columns
-    %a.pinterest#share-3{ href: '#' }
-      %i.fa.fa-pinterest
-      – Pin it
+    %a.social-link.small.instagram#share-3{ href: '#' }
+    – Pin it
