--- a/public/stylesheets/_variables.css.sass
+++ b/public/stylesheets/_variables.css.sass
@@ -7,7 +7,7 @@ $bg3: #FFFFFF
 $col1: #000000
 $col1alt: #4C4C4C
 
-$font1: 'Remachine Script', script
+$font1: 'remachine', script
 $font2: 'Chaparral Pro', serif
 $default-font: Arial, sans-serif
 
