updated mobile styles

--- a/public/stylesheets/fonts.css.scss
+++ b/public/stylesheets/fonts.css.scss
@@ -18,3 +18,7 @@
 	     url('../fonts/ChaparralPro-Regular.ttf')  format('truetype'),
 	     url('../fonts/ChaparralPro-Regular.svg#ChaparralPro-Regular') format('svg');
 }
+
+.not-a-selector {
+	display: none;
+}
